# mesan_compositer

./: .bandit  .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  run_composites.sh  set.env  setup.cfg  setup.py
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
doc/: Makefile
doc/source/: conf.py  index.rst
etc/: .mesan_compositer_profile  .profile  log_config.yaml.template  logging.ini.template  mesan_sat_config.cfg  mesan_sat_config.cfg_template  mesan_sat_config.yaml.template
mesan_compositer/: __init__.py  composite_tools.py  config.py  ct_quicklooks.py  ctth_quicklooks.py  load_cloud_products.py  logger.py  make_ct_composite.py  make_ctth_composite.py  mesan_composite_runner.py  netcdf4.py  netcdf_io.py  pps_msg_conversions.py  prt_nwcsaf_cloudamount.py  prt_nwcsaf_cloudheight.py  prt_saf_cloudamount.py  quicklooks.py  utils.py  version.py
mesan_compositer/tests/: __init__.py  test_compositer.py  test_input.py  test_pps_msg_converter.py
nwcsaf_formats/: #ppsv2014_to_oldformat.py#  .#ppsv2014_to_oldformat.py  __init__.py  noaa18_20141111_0639__48832.euron1.cloudtype.hdf  pps_conversions.py  pps_conversions.py~  ppsv2014_to_oldformat.py  ppsv2014_to_oldformat.py~
tests/: __init__.py  conftest.py  test_color_legends.py  test_compositer.py  test_config.py  test_input.py  test_loader.py  test_make_ct_composite.py  test_pps_conversions.py  test_pps_msg_converter.py  test_select_scenes.py
