[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[bdist_rpm]
provides=mesan_compositer
requires=numpy pyorbital python-pillow netcdf4-python pyresample satpy
no-autoreq=True
release=1
packager = Adam Dybbroe <adam.dybbroe@smhi.se>

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120

[coverage:run]
source = ./
omit =

